// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots view 1`] = `
<div
  className="NotesFeed"
  style={
    {
      "fontSize": 14,
      "margin": 10,
    }
  }
>
  <div
    className="SectionHeading"
    style={
      {
        "borderBottom": "1px solid #333",
        "padding": 10,
      }
    }
  >
    <h4
      style={
        {
          "color": "black",
          "display": "inline",
        }
      }
    >
      My notes
    </h4>
  </div>
  <div
    style={
      {
        "color": "#aaa",
        "margin": 10,
        "marginTop": 20,
      }
    }
  >
    Showing 
    2
     notes
  </div>
  <div
    className="feed"
    style={
      {
        "display": "flex",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <div
      className="notes-list"
      style={
        {
          "flex": 1,
        }
      }
    >
      <div>
        <div
          className="EventNoteCard"
        >
          <div
            className="Card FeedCardFrame"
            style={
              {
                "border": "1px solid #ccc",
                "borderRadius": 3,
                "marginTop": 20,
                "padding": 10,
              }
            }
          >
            <div
              className="FeedCardFrame-FrameHeader"
              style={
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <div
                style={
                  {
                    "display": "flex",
                  }
                }
              >
                <div
                  className="StudentPhotoCropped"
                  style={
                    {
                      "backgroundColor": "#ddd",
                      "backgroundImage": "url(/students/46/photo)",
                      "backgroundPosition": "center top",
                      "backgroundPositionY": -10,
                      "backgroundRepeat": "no-repeat",
                      "backgroundSize": "150%",
                      "border": "1px solid #ddd",
                      "borderRadius": 3,
                      "height": 58,
                      "marginRight": 10,
                      "overflow": "hidden",
                      "width": 58,
                    }
                  }
                />
                <div
                  style={
                    {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "column",
                      "justifyContent": "flex-start",
                    }
                  }
                >
                  <div>
                    <a
                      href="/students/46"
                      style={
                        {
                          "fontWeight": "bold",
                        }
                      }
                    >
                      Pocahontas
                       
                      White
                    </a>
                  </div>
                  <div>
                    5th grade
                  </div>
                  <div>
                    <span
                      className="Homeroom"
                      style={{}}
                    >
                      <a
                        href="/homerooms/3"
                      >
                        WSNS 501
                      </a>
                      <span>
                        <span>
                           
                        </span>
                         with 
                        <a
                          className="Educator"
                          href="mailto:marcus@demo.studentinsights.org"
                          style={{}}
                        >
                          Marcus Teacher
                        </a>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                style={
                  {
                    "alignItems": "flex-end",
                    "display": "flex",
                    "flexDirection": "column",
                    "textAlign": "right",
                  }
                }
              >
                <div>
                  <div>
                    <span>
                      by 
                    </span>
                    <a
                      className="Educator"
                      href="mailto:uri@demo.studentinsights.org"
                      style={
                        {
                          "fontWeight": "bold",
                        }
                      }
                    >
                      Uri Disney
                    </a>
                  </div>
                </div>
                <div>
                  <div>
                    in 
                    Parent conversation
                  </div>
                </div>
                <div>
                  <div
                    className="Timestamp"
                    style={{}}
                  >
                    in a year
                     on 
                    5/25
                  </div>
                </div>
              </div>
            </div>
            <div
              style={
                {
                  "marginBottom": 20,
                  "marginTop": 20,
                }
              }
            >
              <div
                className="NoteCard-substance"
              >
                <div
                  className="RestrictedNotePresence"
                >
                  <div>
                    <div
                      className="NoteText"
                      style={
                        {
                          "border": 0,
                          "color": "#999",
                          "fontFamily": "'Open Sans', sans-serif",
                          "fontSize": 14,
                          "marginTop": 5,
                          "outline": "1px solid transparent",
                          "overflowX": "hidden",
                          "padding": 0,
                          "whiteSpace": "pre-wrap",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      To respect their privacy, Uri or an administrator marked this note as restricted.
                    </div>
                  </div>
                </div>
                <div
                  style={
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "space-between",
                      "marginTop": 15,
                    }
                  }
                >
                  <span
                    style={
                      {
                        "fontSize": 12,
                      }
                    }
                  >
                     
                  </span>
                  <span
                    style={
                      {
                        "fontSize": 12,
                      }
                    }
                  >
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="FeedCardFrame-footer"
              style={
                {
                  "display": "flex",
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                }
              }
            >
              <div />
              <div>
                <span
                  className="Badge"
                  style={
                    {
                      "backgroundColor": "#CDD71A",
                      "color": "white",
                      "marginLeft": 5,
                      "opacity": 0.5,
                      "padding": 5,
                    }
                  }
                >
                  Parent conversation
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="EventNoteCard"
        >
          <div
            className="Card FeedCardFrame"
            style={
              {
                "border": "1px solid #ccc",
                "borderRadius": 3,
                "marginTop": 20,
                "padding": 10,
              }
            }
          >
            <div
              className="FeedCardFrame-FrameHeader"
              style={
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <div
                style={
                  {
                    "display": "flex",
                  }
                }
              >
                <div
                  className="StudentPhotoCropped"
                  style={
                    {
                      "backgroundColor": "#ddd",
                      "backgroundImage": "url(/students/46/photo)",
                      "backgroundPosition": "center top",
                      "backgroundPositionY": -10,
                      "backgroundRepeat": "no-repeat",
                      "backgroundSize": "150%",
                      "border": "1px solid #ddd",
                      "borderRadius": 3,
                      "height": 58,
                      "marginRight": 10,
                      "overflow": "hidden",
                      "width": 58,
                    }
                  }
                />
                <div
                  style={
                    {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "column",
                      "justifyContent": "flex-start",
                    }
                  }
                >
                  <div>
                    <a
                      href="/students/46"
                      style={
                        {
                          "fontWeight": "bold",
                        }
                      }
                    >
                      Pocahontas
                       
                      White
                    </a>
                  </div>
                  <div>
                    5th grade
                  </div>
                  <div>
                    <span
                      className="Homeroom"
                      style={{}}
                    >
                      <a
                        href="/homerooms/3"
                      >
                        WSNS 501
                      </a>
                      <span>
                        <span>
                           
                        </span>
                         with 
                        <a
                          className="Educator"
                          href="mailto:marcus@demo.studentinsights.org"
                          style={{}}
                        >
                          Marcus Teacher
                        </a>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                style={
                  {
                    "alignItems": "flex-end",
                    "display": "flex",
                    "flexDirection": "column",
                    "textAlign": "right",
                  }
                }
              >
                <div>
                  <div>
                    <span>
                      by 
                    </span>
                    <a
                      className="Educator"
                      href="mailto:uri@demo.studentinsights.org"
                      style={
                        {
                          "fontWeight": "bold",
                        }
                      }
                    >
                      Uri Disney
                    </a>
                  </div>
                </div>
                <div>
                  <div>
                    in 
                    SST Meeting
                  </div>
                </div>
                <div>
                  <div
                    className="Timestamp"
                    style={{}}
                  >
                    in a year
                     on 
                    5/25
                  </div>
                </div>
              </div>
            </div>
            <div
              style={
                {
                  "marginBottom": 20,
                  "marginTop": 20,
                }
              }
            >
              <div
                className="NoteCard-substance"
              >
                <div
                  className="NoteText"
                  style={
                    {
                      "border": 0,
                      "fontFamily": "'Open Sans', sans-serif",
                      "fontSize": 14,
                      "marginTop": 5,
                      "outline": "1px solid transparent",
                      "overflowX": "hidden",
                      "padding": 0,
                      "whiteSpace": "pre-wrap",
                      "wordBreak": "break-word",
                    }
                  }
                >
                  hi there this is working
                </div>
                <div
                  style={
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "space-between",
                      "marginTop": 15,
                    }
                  }
                >
                  <span
                    style={
                      {
                        "color": "#aaa",
                        "fontSize": 12,
                      }
                    }
                  >
                    <span>
                      Revised 
                    </span>
                    in a year
                  </span>
                  <span
                    style={
                      {
                        "fontSize": 12,
                      }
                    }
                  >
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="FeedCardFrame-footer"
              style={
                {
                  "display": "flex",
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                }
              }
            >
              <div />
              <div>
                <span
                  className="Badge"
                  style={
                    {
                      "backgroundColor": "#31AB39",
                      "color": "white",
                      "marginLeft": 5,
                      "opacity": 0.5,
                      "padding": 5,
                    }
                  }
                >
                  SST Meeting
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        {
          "flex": 1,
          "paddingLeft": 20,
        }
      }
    />
  </div>
</div>
`;

exports[`snapshots view for restricted 1`] = `
<div
  className="NotesFeed"
  style={
    {
      "fontSize": 14,
      "margin": 10,
    }
  }
>
  <div
    className="SectionHeading"
    style={
      {
        "borderBottom": "1px solid #333",
        "padding": 10,
      }
    }
  >
    <h4
      style={
        {
          "color": "black",
          "display": "inline",
        }
      }
    >
      My notes
    </h4>
  </div>
  <div
    style={
      {
        "color": "#aaa",
        "margin": 10,
        "marginTop": 20,
      }
    }
  >
    Showing 
    2
     notes
  </div>
  <div
    className="feed"
    style={
      {
        "display": "flex",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <div
      className="notes-list"
      style={
        {
          "flex": 1,
        }
      }
    >
      <div>
        <div
          className="EventNoteCard"
        >
          <div
            className="Card FeedCardFrame"
            style={
              {
                "border": "1px solid #ccc",
                "borderRadius": 3,
                "marginTop": 20,
                "padding": 10,
              }
            }
          >
            <div
              className="FeedCardFrame-FrameHeader"
              style={
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <div
                style={
                  {
                    "display": "flex",
                  }
                }
              >
                <div
                  className="StudentPhotoCropped"
                  style={
                    {
                      "backgroundColor": "#ddd",
                      "backgroundImage": "url(/students/46/photo)",
                      "backgroundPosition": "center top",
                      "backgroundPositionY": -10,
                      "backgroundRepeat": "no-repeat",
                      "backgroundSize": "150%",
                      "border": "1px solid #ddd",
                      "borderRadius": 3,
                      "height": 58,
                      "marginRight": 10,
                      "overflow": "hidden",
                      "width": 58,
                    }
                  }
                />
                <div
                  style={
                    {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "column",
                      "justifyContent": "flex-start",
                    }
                  }
                >
                  <div>
                    <a
                      href="/students/46"
                      style={
                        {
                          "fontWeight": "bold",
                        }
                      }
                    >
                      Pocahontas
                       
                      White
                    </a>
                  </div>
                  <div>
                    5th grade
                  </div>
                  <div>
                    <span
                      className="Homeroom"
                      style={{}}
                    >
                      <a
                        href="/homerooms/3"
                      >
                        WSNS 501
                      </a>
                      <span>
                        <span>
                           
                        </span>
                         with 
                        <a
                          className="Educator"
                          href="mailto:marcus@demo.studentinsights.org"
                          style={{}}
                        >
                          Marcus Teacher
                        </a>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                style={
                  {
                    "alignItems": "flex-end",
                    "display": "flex",
                    "flexDirection": "column",
                    "textAlign": "right",
                  }
                }
              >
                <div>
                  <div>
                    <span>
                      by 
                    </span>
                    <a
                      className="Educator"
                      href="mailto:uri@demo.studentinsights.org"
                      style={
                        {
                          "fontWeight": "bold",
                        }
                      }
                    >
                      Uri Disney
                    </a>
                  </div>
                </div>
                <div>
                  <div>
                    in 
                    Parent conversation
                  </div>
                </div>
                <div>
                  <div
                    className="Timestamp"
                    style={{}}
                  >
                    in a year
                     on 
                    5/25
                  </div>
                </div>
              </div>
            </div>
            <div
              style={
                {
                  "marginBottom": 20,
                  "marginTop": 20,
                }
              }
            >
              <div
                className="NoteCard-substance"
              >
                <div
                  className="RestrictedNotePresence"
                >
                  <div>
                    <div
                      className="NoteText"
                      style={
                        {
                          "border": 0,
                          "color": "#999",
                          "fontFamily": "'Open Sans', sans-serif",
                          "fontSize": 14,
                          "marginTop": 5,
                          "outline": "1px solid transparent",
                          "overflowX": "hidden",
                          "padding": 0,
                          "whiteSpace": "pre-wrap",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      To respect their privacy, Uri or an administrator marked this note as restricted.
                    </div>
                    <a
                      href="#"
                      onClick={[Function]}
                      style={
                        {
                          "color": "#999",
                          "cursor": "pointer",
                          "display": "inline-block",
                          "fontSize": 12,
                          "paddingTop": 5,
                          "textDecoration": "underline",
                        }
                      }
                    >
                      show restricted note
                    </a>
                  </div>
                </div>
                <div
                  style={
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "space-between",
                      "marginTop": 15,
                    }
                  }
                >
                  <span
                    style={
                      {
                        "fontSize": 12,
                      }
                    }
                  >
                     
                  </span>
                  <span
                    style={
                      {
                        "fontSize": 12,
                      }
                    }
                  >
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="FeedCardFrame-footer"
              style={
                {
                  "display": "flex",
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                }
              }
            >
              <div />
              <div>
                <span
                  className="Badge"
                  style={
                    {
                      "backgroundColor": "#CDD71A",
                      "color": "white",
                      "marginLeft": 5,
                      "opacity": 0.5,
                      "padding": 5,
                    }
                  }
                >
                  Parent conversation
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="EventNoteCard"
        >
          <div
            className="Card FeedCardFrame"
            style={
              {
                "border": "1px solid #ccc",
                "borderRadius": 3,
                "marginTop": 20,
                "padding": 10,
              }
            }
          >
            <div
              className="FeedCardFrame-FrameHeader"
              style={
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <div
                style={
                  {
                    "display": "flex",
                  }
                }
              >
                <div
                  className="StudentPhotoCropped"
                  style={
                    {
                      "backgroundColor": "#ddd",
                      "backgroundImage": "url(/students/46/photo)",
                      "backgroundPosition": "center top",
                      "backgroundPositionY": -10,
                      "backgroundRepeat": "no-repeat",
                      "backgroundSize": "150%",
                      "border": "1px solid #ddd",
                      "borderRadius": 3,
                      "height": 58,
                      "marginRight": 10,
                      "overflow": "hidden",
                      "width": 58,
                    }
                  }
                />
                <div
                  style={
                    {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "column",
                      "justifyContent": "flex-start",
                    }
                  }
                >
                  <div>
                    <a
                      href="/students/46"
                      style={
                        {
                          "fontWeight": "bold",
                        }
                      }
                    >
                      Pocahontas
                       
                      White
                    </a>
                  </div>
                  <div>
                    5th grade
                  </div>
                  <div>
                    <span
                      className="Homeroom"
                      style={{}}
                    >
                      <a
                        href="/homerooms/3"
                      >
                        WSNS 501
                      </a>
                      <span>
                        <span>
                           
                        </span>
                         with 
                        <a
                          className="Educator"
                          href="mailto:marcus@demo.studentinsights.org"
                          style={{}}
                        >
                          Marcus Teacher
                        </a>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                style={
                  {
                    "alignItems": "flex-end",
                    "display": "flex",
                    "flexDirection": "column",
                    "textAlign": "right",
                  }
                }
              >
                <div>
                  <div>
                    <span>
                      by 
                    </span>
                    <a
                      className="Educator"
                      href="mailto:uri@demo.studentinsights.org"
                      style={
                        {
                          "fontWeight": "bold",
                        }
                      }
                    >
                      Uri Disney
                    </a>
                  </div>
                </div>
                <div>
                  <div>
                    in 
                    SST Meeting
                  </div>
                </div>
                <div>
                  <div
                    className="Timestamp"
                    style={{}}
                  >
                    in a year
                     on 
                    5/25
                  </div>
                </div>
              </div>
            </div>
            <div
              style={
                {
                  "marginBottom": 20,
                  "marginTop": 20,
                }
              }
            >
              <div
                className="NoteCard-substance"
              >
                <div
                  className="NoteText"
                  style={
                    {
                      "border": 0,
                      "fontFamily": "'Open Sans', sans-serif",
                      "fontSize": 14,
                      "marginTop": 5,
                      "outline": "1px solid transparent",
                      "overflowX": "hidden",
                      "padding": 0,
                      "whiteSpace": "pre-wrap",
                      "wordBreak": "break-word",
                    }
                  }
                >
                  hi there this is working
                </div>
                <div
                  style={
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "space-between",
                      "marginTop": 15,
                    }
                  }
                >
                  <span
                    style={
                      {
                        "color": "#aaa",
                        "fontSize": 12,
                      }
                    }
                  >
                    <span>
                      Revised 
                    </span>
                    in a year
                  </span>
                  <span
                    style={
                      {
                        "fontSize": 12,
                      }
                    }
                  >
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="FeedCardFrame-footer"
              style={
                {
                  "display": "flex",
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                }
              }
            >
              <div />
              <div>
                <span
                  className="Badge"
                  style={
                    {
                      "backgroundColor": "#31AB39",
                      "color": "white",
                      "marginLeft": 5,
                      "opacity": 0.5,
                      "padding": 5,
                    }
                  }
                >
                  SST Meeting
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        {
          "flex": 1,
          "paddingLeft": 20,
        }
      }
    />
  </div>
</div>
`;

exports[`snapshots view with wordcloud 1`] = `
<div
  className="NotesFeed"
  style={
    {
      "fontSize": 14,
      "margin": 10,
    }
  }
>
  <div
    className="SectionHeading"
    style={
      {
        "borderBottom": "1px solid #333",
        "padding": 10,
      }
    }
  >
    <h4
      style={
        {
          "color": "black",
          "display": "inline",
        }
      }
    >
      My notes
    </h4>
  </div>
  <div
    style={
      {
        "color": "#aaa",
        "margin": 10,
        "marginTop": 20,
      }
    }
  >
    Showing 
    2
     notes
  </div>
  <div
    className="feed"
    style={
      {
        "display": "flex",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <div
      className="notes-list"
      style={
        {
          "flex": 1,
        }
      }
    >
      <div>
        <div
          className="EventNoteCard"
        >
          <div
            className="Card FeedCardFrame"
            style={
              {
                "border": "1px solid #ccc",
                "borderRadius": 3,
                "marginTop": 20,
                "padding": 10,
              }
            }
          >
            <div
              className="FeedCardFrame-FrameHeader"
              style={
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <div
                style={
                  {
                    "display": "flex",
                  }
                }
              >
                <div
                  className="StudentPhotoCropped"
                  style={
                    {
                      "backgroundColor": "#ddd",
                      "backgroundImage": "url(/students/46/photo)",
                      "backgroundPosition": "center top",
                      "backgroundPositionY": -10,
                      "backgroundRepeat": "no-repeat",
                      "backgroundSize": "150%",
                      "border": "1px solid #ddd",
                      "borderRadius": 3,
                      "height": 58,
                      "marginRight": 10,
                      "overflow": "hidden",
                      "width": 58,
                    }
                  }
                />
                <div
                  style={
                    {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "column",
                      "justifyContent": "flex-start",
                    }
                  }
                >
                  <div>
                    <a
                      href="/students/46"
                      style={
                        {
                          "fontWeight": "bold",
                        }
                      }
                    >
                      Pocahontas
                       
                      White
                    </a>
                  </div>
                  <div>
                    5th grade
                  </div>
                  <div>
                    <span
                      className="Homeroom"
                      style={{}}
                    >
                      <a
                        href="/homerooms/3"
                      >
                        WSNS 501
                      </a>
                      <span>
                        <span>
                           
                        </span>
                         with 
                        <a
                          className="Educator"
                          href="mailto:marcus@demo.studentinsights.org"
                          style={{}}
                        >
                          Marcus Teacher
                        </a>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                style={
                  {
                    "alignItems": "flex-end",
                    "display": "flex",
                    "flexDirection": "column",
                    "textAlign": "right",
                  }
                }
              >
                <div>
                  <div>
                    <span>
                      by 
                    </span>
                    <a
                      className="Educator"
                      href="mailto:uri@demo.studentinsights.org"
                      style={
                        {
                          "fontWeight": "bold",
                        }
                      }
                    >
                      Uri Disney
                    </a>
                  </div>
                </div>
                <div>
                  <div>
                    in 
                    Parent conversation
                  </div>
                </div>
                <div>
                  <div
                    className="Timestamp"
                    style={{}}
                  >
                    in a year
                     on 
                    5/25
                  </div>
                </div>
              </div>
            </div>
            <div
              style={
                {
                  "marginBottom": 20,
                  "marginTop": 20,
                }
              }
            >
              <div
                className="NoteCard-substance"
              >
                <div
                  className="RestrictedNotePresence"
                >
                  <div>
                    <div
                      className="NoteText"
                      style={
                        {
                          "border": 0,
                          "color": "#999",
                          "fontFamily": "'Open Sans', sans-serif",
                          "fontSize": 14,
                          "marginTop": 5,
                          "outline": "1px solid transparent",
                          "overflowX": "hidden",
                          "padding": 0,
                          "whiteSpace": "pre-wrap",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      To respect their privacy, Uri or an administrator marked this note as restricted.
                    </div>
                  </div>
                </div>
                <div
                  style={
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "space-between",
                      "marginTop": 15,
                    }
                  }
                >
                  <span
                    style={
                      {
                        "fontSize": 12,
                      }
                    }
                  >
                     
                  </span>
                  <span
                    style={
                      {
                        "fontSize": 12,
                      }
                    }
                  >
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="FeedCardFrame-footer"
              style={
                {
                  "display": "flex",
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                }
              }
            >
              <div />
              <div>
                <span
                  className="Badge"
                  style={
                    {
                      "backgroundColor": "#CDD71A",
                      "color": "white",
                      "marginLeft": 5,
                      "opacity": 0.5,
                      "padding": 5,
                    }
                  }
                >
                  Parent conversation
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="EventNoteCard"
        >
          <div
            className="Card FeedCardFrame"
            style={
              {
                "border": "1px solid #ccc",
                "borderRadius": 3,
                "marginTop": 20,
                "padding": 10,
              }
            }
          >
            <div
              className="FeedCardFrame-FrameHeader"
              style={
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <div
                style={
                  {
                    "display": "flex",
                  }
                }
              >
                <div
                  className="StudentPhotoCropped"
                  style={
                    {
                      "backgroundColor": "#ddd",
                      "backgroundImage": "url(/students/46/photo)",
                      "backgroundPosition": "center top",
                      "backgroundPositionY": -10,
                      "backgroundRepeat": "no-repeat",
                      "backgroundSize": "150%",
                      "border": "1px solid #ddd",
                      "borderRadius": 3,
                      "height": 58,
                      "marginRight": 10,
                      "overflow": "hidden",
                      "width": 58,
                    }
                  }
                />
                <div
                  style={
                    {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "column",
                      "justifyContent": "flex-start",
                    }
                  }
                >
                  <div>
                    <a
                      href="/students/46"
                      style={
                        {
                          "fontWeight": "bold",
                        }
                      }
                    >
                      Pocahontas
                       
                      White
                    </a>
                  </div>
                  <div>
                    5th grade
                  </div>
                  <div>
                    <span
                      className="Homeroom"
                      style={{}}
                    >
                      <a
                        href="/homerooms/3"
                      >
                        WSNS 501
                      </a>
                      <span>
                        <span>
                           
                        </span>
                         with 
                        <a
                          className="Educator"
                          href="mailto:marcus@demo.studentinsights.org"
                          style={{}}
                        >
                          Marcus Teacher
                        </a>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                style={
                  {
                    "alignItems": "flex-end",
                    "display": "flex",
                    "flexDirection": "column",
                    "textAlign": "right",
                  }
                }
              >
                <div>
                  <div>
                    <span>
                      by 
                    </span>
                    <a
                      className="Educator"
                      href="mailto:uri@demo.studentinsights.org"
                      style={
                        {
                          "fontWeight": "bold",
                        }
                      }
                    >
                      Uri Disney
                    </a>
                  </div>
                </div>
                <div>
                  <div>
                    in 
                    SST Meeting
                  </div>
                </div>
                <div>
                  <div
                    className="Timestamp"
                    style={{}}
                  >
                    in a year
                     on 
                    5/25
                  </div>
                </div>
              </div>
            </div>
            <div
              style={
                {
                  "marginBottom": 20,
                  "marginTop": 20,
                }
              }
            >
              <div
                className="NoteCard-substance"
              >
                <div
                  className="NoteText"
                  style={
                    {
                      "border": 0,
                      "fontFamily": "'Open Sans', sans-serif",
                      "fontSize": 14,
                      "marginTop": 5,
                      "outline": "1px solid transparent",
                      "overflowX": "hidden",
                      "padding": 0,
                      "whiteSpace": "pre-wrap",
                      "wordBreak": "break-word",
                    }
                  }
                >
                  hi there this is working
                </div>
                <div
                  style={
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "space-between",
                      "marginTop": 15,
                    }
                  }
                >
                  <span
                    style={
                      {
                        "color": "#aaa",
                        "fontSize": 12,
                      }
                    }
                  >
                    <span>
                      Revised 
                    </span>
                    in a year
                  </span>
                  <span
                    style={
                      {
                        "fontSize": 12,
                      }
                    }
                  >
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="FeedCardFrame-footer"
              style={
                {
                  "display": "flex",
                  "justifyContent": "space-between",
                  "marginBottom": 5,
                }
              }
            >
              <div />
              <div>
                <span
                  className="Badge"
                  style={
                    {
                      "backgroundColor": "#31AB39",
                      "color": "white",
                      "marginLeft": 5,
                      "opacity": 0.5,
                      "padding": 5,
                    }
                  }
                >
                  SST Meeting
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        {
          "flex": 1,
          "paddingLeft": 20,
        }
      }
    >
      <div>
        <div
          className="Card BoxCard "
          style={
            {
              "border": "1px solid #ccc",
              "borderRadius": 3,
              "display": "flex",
              "flexDirection": "column",
              "margin": 20,
              "marginTop": 10,
              "padding": 0,
            }
          }
        >
          <div
            style={
              {
                "backgroundColor": "#eee",
                "borderBottom": "1px solid #ccc",
                "color": "black",
                "display": "flex",
                "justifyContent": "space-between",
                "padding": 10,
              }
            }
          >
            Most common words
          </div>
          <canvas
            className="WordCloud"
            height={400}
            style={
              {
                "cursor": "pointer",
              }
            }
            width={400}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
